--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
-    "smoke": "node scripts/smoke.js"
+    "smoke": "node scripts/smoke.js",
+    "backend": "node --experimental-modules server/index.js"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "framer-motion": "^10.16.16"
+    "framer-motion": "^10.16.16",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
