--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "framer-motion": "^10.16.16",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "openai": "^4.27.0",
+    "@anthropic-ai/sdk": "^0.12.0",
+    "@google/generative-ai": "^0.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
