--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.2",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "jsonwebtoken": "^9.0.2",
+    "@supabase/supabase-js": "^2.39.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
