--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "rimraf dist && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
@@ -15,15 +15,15 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.12.0",
     "@google/generative-ai": "^0.4.0",
+    "@supabase/supabase-js": "^2.39.7",
     "framer-motion": "^10.16.16",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "openai": "^4.27.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.2",
-    "ws": "^8.16.0",
-    "jsonwebtoken": "^9.0.2",
-    "@supabase/supabase-js": "^2.39.7"
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -37,6 +37,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "puppeteer": "^22.9.0",
+    "rimraf": "^5.0.10",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
