--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview",
     "test": "vitest",
     "smoke": "node scripts/smoke.js",
-    "backend": "node --experimental-modules server/index.js"
+    "backend": "node --experimental-modules server/index.js",
+    "build:schemas": "node scripts/genSchemas.js",
+    "postinstall": "npm run build:schemas"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.12.0",
@@ -23,7 +25,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.2",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "zod": "^3.25.67",
+    "@rjsf/core": "^5.2.1",
+    "@dnd-kit/core": "^6.1.0",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -42,6 +48,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2",
-    "vitest": "^1.5.0"
+    "vitest": "^1.5.0",
+    "zod-to-json-schema": "^3.24.5"
   }
 }
