feat: ToolRegistry + OpenAI & Zapier integrations, credential settings; updated docs and logs

--- a/env.example
+++ b/env.example
@@ -17,4 +17,10 @@ MCP_SHELL_IMAGE=debian:stable-slim
 
 # --- Supabase (optional) ---
 SUPABASE_URL=
-SUPABASE_SERVICE_ROLE= 
+SUPABASE_SERVICE_ROLE=
+
+# --- Zapier (optional) ---
+ZAPIER_WEBHOOK_URL= 
+
+# --- OpenAI (optional) ---
+OPENAI_API_KEY= 
