feat: GitHub MCP & Supabase integrations + docs

--- a/env.example
+++ b/env.example
@@ -21,6 +21,10 @@ SUPABASE_SERVICE_ROLE=
 
 # --- Zapier (optional) ---
 ZAPIER_WEBHOOK_URL= 
+ZAPIER_MCP_URL= 
 
 # --- OpenAI (optional) ---
 OPENAI_API_KEY= 
+
+# --- Claude (optional) ---
+CLAUDE_MCP_URL=http://localhost:8081
