--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "test": "vitest",
     "smoke": "node scripts/smoke.js",
     "backend": "node --experimental-modules server/index.js",
+    "claude:mcp": "claude --mcp-server --http-port 8081 | cat",
     "build:schemas": "node scripts/genSchemas.js",
     "postinstall": "npm run build:schemas"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.12.0",
+    "@dnd-kit/core": "^6.1.0",
     "@google/generative-ai": "^0.4.0",
+    "@rjsf/core": "^5.2.1",
     "@supabase/supabase-js": "^2.39.7",
+    "cross-spawn": "^7.0.6",
+    "dotenv": "^16.4.5",
     "framer-motion": "^10.16.16",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
@@ -26,10 +31,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.2",
     "ws": "^8.16.0",
-    "zod": "^3.25.67",
-    "@rjsf/core": "^5.2.1",
-    "@dnd-kit/core": "^6.1.0",
-    "dotenv": "^16.4.5"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
