chore: sprint-0 prep - add Prettier config, CI step, contributing guidelines and MVP sprint plan

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,32 @@
 version: '3.9'
+
 services:
-  slash-mcp:
+  app:
     build: .
+    container_name: slash_mcp_app
     ports:
-      - '80:80'
-      - '8080:8080'
+      - "8080:8080"   # WebSocket server
+    environment:
+      - NODE_ENV=production
+      - PORT=8080
+      - AUTH_OPTIONAL=true
+      # Secrets injected at runtime (see .env.example)
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - GITHUB_PERSONAL_ACCESS_TOKEN=${GITHUB_PERSONAL_ACCESS_TOKEN}
+      - SUPABASE_URL=${SUPABASE_URL}
+      - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
     volumes:
-      - ./storage:/app/storage 
+      - ./storage:/usr/src/app/storage
+      - ./logs:/usr/src/app/logs
+    depends_on:
+      - redis
+
+  redis:
+    image: redis:7-alpine
+    container_name: slash_mcp_redis
+    volumes:
+      - redis_data:/data
+    restart: always
+
+volumes:
+  redis_data: 
