--- a/env.example
+++ b/env.example
@@ -24,7 +24,11 @@ ZAPIER_WEBHOOK_URL=
 ZAPIER_MCP_URL= 
 
 # --- OpenAI (optional) ---
-OPENAI_API_KEY= 
+OPENAI_API_KEY=
 
 # --- Claude (optional) ---
 CLAUDE_MCP_URL=http://localhost:8081
+
+# === Docker Compose secrets ===
+GITHUB_PERSONAL_ACCESS_TOKEN=
+SUPABASE_SERVICE_ROLE_KEY=
