--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
           node-version: 20
       - name: Install deps
         run: npm ci
+      - name: Prettier check
+        run: npm run format:check
       - name: Lint
         run: npm run lint
       - name: Unit tests
