--- a/package.json
+++ b/package.json
@@ -44,20 +44,21 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
+    "prettier": "^3.4.0",
     "puppeteer": "^22.9.0",
+    "react-joyride": "^2.9.2",
     "rimraf": "^5.0.10",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2",
     "vitest": "^1.5.0",
-    "zod-to-json-schema": "^3.24.5",
-    "prettier": "^3.4.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0"
+    "zod-to-json-schema": "^3.24.5"
   }
 }
