--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "postinstall": "npm run build:schemas",
     "mcp:proxy": "node scripts/mcpProxy.js",
     "dev:all": "concurrently -k \"npm run mcp:proxy\" \"npm run backend\" \"vite\"",
+    "dev:core": "concurrently -k \"npm run backend\" \"vite\"",
     "prepare": "husky install"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.12.0",
+    "@anthropic-ai/sdk": "^0.56.0",
     "@dnd-kit/core": "^6.1.0",
-    "@google/generative-ai": "^0.4.0",
+    "@google/generative-ai": "^0.24.1",
     "@rjsf/core": "^5.2.1",
+    "@rjsf/utils": "^5.24.12",
     "@supabase/supabase-js": "^2.39.7",
     "cross-spawn": "^7.0.6",
     "dotenv": "^16.4.5",
@@ -49,12 +51,14 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "concurrently": "^8.2.0",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "husky": "^9.0.11",
     "postcss": "^8.4.35",
     "prettier": "^3.4.0",
     "puppeteer": "^22.9.0",
@@ -63,10 +67,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2",
-    "vitest": "^1.5.0",
-    "zod-to-json-schema": "^3.24.5",
-    "concurrently": "^8.2.0",
-    "husky": "^9.0.11"
+    "vite": "^7.0.2",
+    "vitest": "^3.2.4",
+    "zod-to-json-schema": "^3.24.5"
   }
 }
