--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@anthropic-ai/sdk": "^0.56.0",
     "@dnd-kit/core": "^6.1.0",
     "@google/generative-ai": "^0.24.1",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@rjsf/core": "^5.2.1",
     "@rjsf/utils": "^5.24.12",
     "@supabase/supabase-js": "^2.39.7",
@@ -39,8 +42,10 @@
     "openai": "^4.27.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-rnd": "^10.5.2",
     "react-router-dom": "^7.6.2",
     "react-textarea-autosize": "^8.5.0",
+    "tw-animate-css": "^1.3.5",
     "winston": "^3.11.0",
     "ws": "^8.16.0",
     "zod": "^3.25.67"
